--- a/requirements.in
+++ b/requirements.in
@@ -13,7 +13,7 @@ gradio>=5.9,<6.0
 pdf2image>=1.17,<2.0
 pypdf>=5.1,<6.0
 reportlab>=4.2,<5.0
-Pillow>=11.3,<12.0
+pillow>=11.3,<12.0
 
 # Translation & NLP
 spacy>=3.8,<4.0
