--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,17 @@ aiofiles==24.1.0
     # via gradio
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.12.15
+aiohttp==3.13.3
     # via modal
 aiosignal==1.4.0
     # via aiohttp
+annotated-doc==0.0.4
+    # via
+    #   fastapi
+    #   typer
 annotated-types==0.7.0
     # via pydantic
-anyio==4.10.0
+anyio==4.12.1
     # via
     #   gradio
     #   httpx
@@ -22,72 +26,77 @@ anyio==4.10.0
     #   sse-starlette
     #   starlette
     #   watchfiles
-attrs==25.3.0
+attrs==25.4.0
     # via
     #   aiohttp
     #   jsonschema
     #   referencing
-    #   sigtools
 audioop-lts==0.2.2
     # via gradio
-blis==1.3.0
+blis==1.3.3
     # via thinc
-brotli==1.1.0
+brotli==1.2.0
     # via gradio
 catalogue==2.0.10
     # via
     #   spacy
     #   srsly
     #   thinc
-certifi==2025.8.3
+cbor2==5.8.0
+    # via modal
+certifi==2026.2.25
     # via
     #   httpcore
     #   httpx
     #   modal
     #   requests
-charset-normalizer==3.4.3
+cffi==2.0.0
+    # via cryptography
+charset-normalizer==3.4.4
     # via
     #   reportlab
     #   requests
-click==8.2.1
+click==8.3.1
     # via
     #   modal
     #   typer
     #   uvicorn
-cloudpathlib==0.22.0
+cloudpathlib==0.23.0
     # via weasel
 confection==0.1.5
     # via
     #   thinc
     #   weasel
-cymem==2.0.11
+cryptography==46.0.5
+    # via pyjwt
+cymem==2.0.13
     # via
     #   preshed
     #   spacy
     #   thinc
-fastapi==0.116.2
+fastapi==0.133.1
     # via
     #   -r requirements.in
     #   gradio
-ffmpy==0.6.1
+ffmpy==1.0.0
     # via gradio
-filelock==3.19.1
+filelock==3.24.3
     # via huggingface-hub
-frozenlist==1.7.0
+frozenlist==1.8.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2025.9.0
+fsspec==2026.2.0
     # via
     #   gradio-client
     #   huggingface-hub
-gradio==5.46.0
+gradio==5.50.0
     # via -r requirements.in
-gradio-client==1.13.0
+gradio-client==1.14.0
     # via gradio
 groovy==0.1.2
     # via gradio
-grpclib==0.4.8
+grpclib==0.4.9
     # via modal
 h11==0.16.0
     # via
@@ -95,30 +104,31 @@ h11==0.16.0
     #   uvicorn
 h2==4.3.0
     # via grpclib
-hf-xet==1.1.10
+hf-xet==1.3.1
     # via huggingface-hub
 hpack==4.1.0
     # via h2
 httpcore==1.0.9
     # via httpx
-httptools==0.6.4
+httptools==0.7.1
     # via uvicorn
 httpx==0.28.1
     # via
     #   -r requirements.in
     #   gradio
     #   gradio-client
+    #   huggingface-hub
     #   mcp
     #   safehttpx
-httpx-sse==0.4.1
+httpx-sse==0.4.3
     # via mcp
-huggingface-hub==0.35.0
+huggingface-hub==1.4.1
     # via
     #   gradio
     #   gradio-client
 hyperframe==6.1.0
     # via h2
-idna==3.10
+idna==3.11
     # via
     #   anyio
     #   httpx
@@ -128,48 +138,42 @@ jinja2==3.1.6
     # via
     #   gradio
     #   spacy
-jsonschema==4.25.1
+jsonschema==4.26.0
     # via mcp
 jsonschema-specifications==2025.9.1
     # via jsonschema
-langcodes==3.5.0
-    # via spacy
-language-data==1.3.0
-    # via langcodes
-marisa-trie==1.3.1
-    # via language-data
 markdown-it-py==4.0.0
     # via rich
-markupsafe==3.0.2
+markupsafe==3.0.3
     # via
     #   gradio
     #   jinja2
-mcp==1.14.0
+mcp==1.26.0
     # via -r requirements.in
 mdurl==0.1.2
     # via markdown-it-py
-modal==1.1.4
+modal==1.3.4
     # via -r requirements.in
-multidict==6.6.4
+multidict==6.7.1
     # via
     #   aiohttp
     #   grpclib
     #   yarl
-murmurhash==1.0.13
+murmurhash==1.0.15
     # via
     #   preshed
     #   spacy
     #   thinc
-numpy==2.3.3
+numpy==2.4.2
     # via
     #   blis
     #   gradio
     #   pandas
     #   spacy
     #   thinc
-orjson==3.11.3
+orjson==3.11.7
     # via gradio
-packaging==25.0
+packaging==26.0
     # via
     #   gradio
     #   gradio-client
@@ -177,7 +181,7 @@ packaging==25.0
     #   spacy
     #   thinc
     #   weasel
-pandas==2.3.2
+pandas==2.3.3
     # via gradio
 pdf2image==1.17.0
     # via -r requirements.in
@@ -187,19 +191,21 @@ pillow==11.3.0
     #   gradio
     #   pdf2image
     #   reportlab
-preshed==3.0.10
+preshed==3.0.12
     # via
     #   spacy
     #   thinc
-propcache==0.3.2
+propcache==0.4.1
     # via
     #   aiohttp
     #   yarl
-protobuf==6.32.1
+protobuf==6.33.5
     # via modal
-psutil==7.1.0
+psutil==7.2.2
     # via -r requirements.in
-pydantic==2.11.9
+pycparser==3.0
+    # via cffi
+pydantic==2.12.3
     # via
     #   confection
     #   fastapi
@@ -209,107 +215,111 @@ pydantic==2.11.9
     #   spacy
     #   thinc
     #   weasel
-pydantic-core==2.33.2
+pydantic-core==2.41.4
     # via pydantic
-pydantic-settings==2.10.1
+pydantic-settings==2.13.1
     # via mcp
 pydub==0.25.1
     # via gradio
 pygments==2.19.2
     # via rich
-pypdf==5.9.0
+pyjwt[crypto]==2.11.0
+    # via mcp
+pypdf==6.7.3
     # via -r requirements.in
 python-dateutil==2.9.0.post0
     # via pandas
-python-dotenv==1.1.1
+python-dotenv==1.2.1
     # via
     #   -r requirements.in
     #   pydantic-settings
     #   uvicorn
-python-multipart==0.0.20
+python-multipart==0.0.22
     # via
     #   gradio
     #   mcp
 pytz==2025.2
     # via pandas
-pyyaml==6.0.2
+pyyaml==6.0.3
     # via
     #   gradio
     #   huggingface-hub
     #   uvicorn
-referencing==0.36.2
+referencing==0.37.0
     # via
     #   jsonschema
     #   jsonschema-specifications
-reportlab==4.4.3
+reportlab==4.4.10
     # via -r requirements.in
 requests==2.32.5
     # via
     #   -r requirements.in
-    #   huggingface-hub
     #   spacy
     #   weasel
-rich==14.1.0
+rich==14.3.3
     # via
     #   -r requirements.in
     #   modal
     #   typer
-rpds-py==0.27.1
+rpds-py==0.30.0
     # via
     #   jsonschema
     #   referencing
-ruff==0.13.0
+ruff==0.15.2
     # via gradio
-safehttpx==0.1.6
+safehttpx==0.1.7
     # via gradio
 semantic-version==2.10.0
     # via gradio
 shellingham==1.5.4
-    # via typer
-sigtools==4.0.1
-    # via synchronicity
+    # via
+    #   huggingface-hub
+    #   typer
 six==1.17.0
     # via python-dateutil
-smart-open==7.3.1
+smart-open==7.5.1
     # via weasel
-sniffio==1.3.1
-    # via anyio
-spacy==3.8.7
+spacy==3.8.11
     # via -r requirements.in
 spacy-legacy==3.0.12
     # via spacy
 spacy-loggers==1.0.5
     # via spacy
-srsly==2.5.1
+srsly==2.5.2
     # via
     #   confection
     #   spacy
     #   thinc
     #   weasel
-sse-starlette==3.0.2
+sse-starlette==3.2.0
     # via mcp
-starlette==0.48.0
+starlette==0.52.1
     # via
     #   fastapi
     #   gradio
     #   mcp
-synchronicity==0.10.2
+    #   sse-starlette
+synchronicity==0.11.1
     # via modal
-thinc==8.3.6
+thinc==8.3.10
     # via spacy
 toml==0.10.2
     # via modal
 tomlkit==0.13.3
     # via gradio
-tqdm==4.67.1
+tqdm==4.67.3
     # via
     #   -r requirements.in
     #   huggingface-hub
     #   spacy
-typer==0.17.4
+typer==0.24.1
     # via
     #   gradio
     #   modal
+    #   typer-slim
+typer-slim==0.24.0
+    # via
+    #   huggingface-hub
     #   spacy
     #   weasel
 types-certifi==2021.10.8.3
@@ -322,45 +332,47 @@ typing-extensions==4.15.0
     #   gradio
     #   gradio-client
     #   huggingface-hub
+    #   mcp
     #   modal
     #   pydantic
     #   pydantic-core
     #   synchronicity
-    #   typer
     #   typing-inspection
-typing-inspection==0.4.1
+typing-inspection==0.4.2
     # via
+    #   fastapi
+    #   mcp
     #   pydantic
     #   pydantic-settings
-tzdata==2025.2
+tzdata==2025.3
     # via pandas
-urllib3==2.5.0
+urllib3==2.6.3
     # via requests
-uvicorn[standard]==0.35.0
+uvicorn[standard]==0.41.0
     # via
     #   -r requirements.in
     #   gradio
     #   mcp
-uvloop==0.21.0
+uvloop==0.22.1
     # via uvicorn
 wasabi==1.1.3
     # via
     #   spacy
     #   thinc
     #   weasel
-watchfiles==1.1.0
+watchfiles==1.1.1
     # via
     #   modal
     #   uvicorn
-weasel==0.4.1
+weasel==0.4.3
     # via spacy
 websockets==15.0.1
     # via
     #   gradio-client
     #   uvicorn
-wrapt==1.17.3
+wrapt==2.1.1
     # via smart-open
-yarl==1.20.1
+yarl==1.22.0
     # via aiohttp
 
 # The following packages are considered to be unsafe in a requirements file:
