feat(api,utils): implements memory API security and improves monitoring reliability
Add comprehensive security to memory management API including JWT authentication with role-based access control, API key authentication for admin operations, and rate limiting with token bucket algorithm. Also improves memory monitor with proper error handling (eliminates error masking), parameter validation, thread-safe public properties for encapsulation, and configurable MCP client timeouts.

BREAKING CHANGE: MemoryMonitoringError is now raised instead of returning 0.0 on failures

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,19 @@
 LINGO_API_KEY=your-lingo-api-key-here
 
 # ========================
+# MCP Lingo Client Configuration
+# ========================
+
+# MCP client timeouts (in seconds)
+LINGO_MCP_STARTUP_TIMEOUT=30
+LINGO_MCP_CALL_TIMEOUT=90
+LINGO_MCP_SESSION_CLEANUP_TIMEOUT=15
+LINGO_MCP_STDIO_CLEANUP_TIMEOUT=15
+
+# Optional: Override MCP tool name if auto-discovery fails
+LINGO_MCP_TOOL_NAME=translate
+
+# ========================
 # Modal Labs Configuration
 # ========================
 
@@ -84,6 +97,24 @@ CLEANUP_INTERVAL_HOURS=24
 
 # Maximum age of temporary files before deletion (in hours, 1-720)
 MAX_FILE_AGE_HOURS=48
+
+# ========================
+# Memory API Security
+# ========================
+# Enable authentication for memory management endpoints (true/false)
+# Set to false for development, true for production
+MEMORY_API_ENABLE_AUTH=true
+
+# JWT secret for token authentication (generate a strong secret for production)
+MEMORY_API_JWT_SECRET=your-jwt-secret-change-in-production
+
+# Admin API key for memory management operations
+MEMORY_API_KEY=admin-api-key-change-in-production
+
+# Rate limiting configuration (requests per minute)
+MEMORY_API_READ_RATE_LIMIT=60
+MEMORY_API_WRITE_RATE_LIMIT=10
+MEMORY_API_ADMIN_RATE_LIMIT=5
 
 # ========================
 # Web Eval Demo
